[gd_scene load_steps=6 format=3 uid="uid://bhpyiqwlbnmad"]

[ext_resource type="StyleBox" uid="uid://ci3yyoa54a17w" path="res://Theme/YellowPanel.tres" id="1_bs0sk"]
[ext_resource type="Script" uid="uid://lq5jxesgjrsy" path="res://Scripts/TownShop/merch_ship.gd" id="2_4302v"]
[ext_resource type="Texture2D" uid="uid://cqbpsmr8b12de" path="res://Assets/TownBg_001.png" id="2_u711y"]
[ext_resource type="PackedScene" uid="uid://bt2v8s1av0q6i" path="res://Scenes/TownShop/TownShopItem.tscn" id="3_4302v"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ayl0t"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0

[node name="MerchShop" type="PanelContainer" node_paths=PackedStringArray("Scroll", "ItemPlecement")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_bs0sk")
script = ExtResource("2_4302v")
ItemScene = ExtResource("3_4302v")
Scroll = NodePath("VBoxContainer/Scroll")
ItemPlecement = NodePath("VBoxContainer/Scroll/VBoxContainer")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_u711y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_ayl0t")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Scroll"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 10

[node name="LeaveMerch" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Leave"

[connection signal="gui_input" from="VBoxContainer/Scroll" to="." method="_on_scroll_gui_input"]
[connection signal="pressed" from="VBoxContainer/LeaveMerch" to="." method="_on_leave_merch_pressed"]
